# singtown-ai-trainer-yolov5rk

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  mock-task.json  object-detection-20.json  object-detection-2000.json  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
rknn2/: main.py  pyproject.toml
singtown-ai-trainer-yolov5rk/: main.py  pyproject.toml
