[project]
name = "singtown-ai-trainer-yolov5rk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "ipython>=9.6.0",
    "matplotlib>=3.2.2",
    "numpy>=1.18.5",
    "onnx>=1.19.0",
    "opencv-python>=4.1.1",
    "pandas>=1.1.4",
    "pillow==9.5",
    "psutil>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "singtown-ai==1.6.2",
    "tensorboard>=2.20.0",
    "thop>=0.1.1",
    "torch==2.5.1",
    "torchvision>=0.8.1",
    "tqdm>=4.64.0",
]
